temp/lmgc90_dev/src/ChiPy/shared/wrap_parameters.h

 /**
  * @fn int parameters_getInterLawId(char* string_in)
  * @brief Get the id a inter law from its name
  *
  * @cond PYDOC
  * usage i_param = parameters_getInterLawId(bodyName)
  * @param[in] bodyName (string): inter law name
  * @return    i_param (int)    : inter law parameter
  * @endcond
  *
  * @cond CDOC
  * @param[in] string_in (char *) : inter law name
  * @return    i_param   (int)    : inter law parameter
  * @endcond
  */
  extern "C" int parameters_getInterLawId(char* cvalue1);
 /**
  * @fn void parameters_getInterLawNames(char** string_vector, int* vector_size, int* string_size)
  * @brief Get the list of inter laws
  *
  * @cond PYDOC
  * usage bodyNames = parameters_getInterLawName()
  * @return bodyName (string array) : inter law names
  * @endcond
  *
  * @cond CDOC
  * @param[out] string_vector (char **) : inter law name
  * @param[out] vector_size (int * ) : size of string_vector
  * @param[out] string_size (int * ) : size of each string
  * @endcond
  */
  extern "C" void parameters_getInterLawNames(char** string_vector, int* vector_size, int* string_size);
 /**
  * @fn int parameters_getIntegratorId(char* string_in)
  * @brief Get the id a integrator from its name
  *
  * @cond PYDOC
  * usage i_param = parameters_getIntegratorId(bodyName)
  * @param[in] bodyName (string): integrator name
  * @return    i_param (int)    : integrator parameter
  * @endcond
  *
  * @cond CDOC
  * @param[in] string_in (char *) : integrator name
  * @return    i_param   (int)    : integrator parameter
  * @endcond
  */
  extern "C" int parameters_getIntegratorId(char* cvalue1);
 /**
  * @fn void parameters_getIntegratorNames(char** string_vector, int* vector_size, int* string_size)
  * @brief Get the list of integrators
  *
  * @cond PYDOC
  * usage bodyNames = parameters_getIntegratorName()
  * @return bodyName (string array) : integrator names
  * @endcond
  *
  * @cond CDOC
  * @param[out] string_vector (char **) : integrator name
  * @param[out] vector_size (int * ) : size of string_vector
  * @param[out] string_size (int * ) : size of each string
  * @endcond
  */
  extern "C" void parameters_getIntegratorNames(char** string_vector, int* vector_size, int* string_size);
 /**
  * @fn int parameters_getNodeId(char* string_in)
  * @brief Get the id a node from its name
  *
  * @cond PYDOC
  * usage i_param = parameters_getNodeId(bodyName)
  * @param[in] bodyName (string): node name
  * @return    i_param (int)    : node parameter
  * @endcond
  *
  * @cond CDOC
  * @param[in] string_in (char *) : node name
  * @return    i_param   (int)    : node parameter
  * @endcond
  */
  extern "C" int parameters_getNodeId(char* cvalue1);
 /**
  * @fn void parameters_getNodeNames(char** string_vector, int* vector_size, int* string_size)
  * @brief Get the list of nodes
  *
  * @cond PYDOC
  * usage bodyNames = parameters_getNodeName()
  * @return bodyName (string array) : node names
  * @endcond
  *
  * @cond CDOC
  * @param[out] string_vector (char **) : node name
  * @param[out] vector_size (int * ) : size of string_vector
  * @param[out] string_size (int * ) : size of each string
  * @endcond
  */
  extern "C" void parameters_getNodeNames(char** string_vector, int* vector_size, int* string_size);
 /**
  * @fn int parameters_getDimeModeId(char* string_in)
  * @brief Get the id a dime mode from its name
  *
  * @cond PYDOC
  * usage i_param = parameters_getDimeModeId(bodyName)
  * @param[in] bodyName (string): dime mode name
  * @return    i_param (int)    : dime mode parameter
  * @endcond
  *
  * @cond CDOC
  * @param[in] string_in (char *) : dime mode name
  * @return    i_param   (int)    : dime mode parameter
  * @endcond
  */
  extern "C" int parameters_getDimeModeId(char* cvalue1);
 /**
  * @fn void parameters_getDimeModeNames(char** string_vector, int* vector_size, int* string_size)
  * @brief Get the list of dime modes
  *
  * @cond PYDOC
  * usage bodyNames = parameters_getDimeModeName()
  * @return bodyName (string array) : dime mode names
  * @endcond
  *
  * @cond CDOC
  * @param[out] string_vector (char **) : dime mode name
  * @param[out] vector_size (int * ) : size of string_vector
  * @param[out] string_size (int * ) : size of each string
  * @endcond
  */
  extern "C" void parameters_getDimeModeNames(char** string_vector, int* vector_size, int* string_size);
 /**
  * @fn int parameters_getBodyVectorId(char* string_in)
  * @brief Get the id a body vector from its name
  *
  * @cond PYDOC
  * usage i_param = parameters_getBodyVectorId(bodyName)
  * @param[in] bodyName (string): body vector name
  * @return    i_param (int)    : body vector parameter
  * @endcond
  *
  * @cond CDOC
  * @param[in] string_in (char *) : body vector name
  * @return    i_param   (int)    : body vector parameter
  * @endcond
  */
  extern "C" int parameters_getBodyVectorId(char* cvalue1);
 /**
  * @fn void parameters_getBodyVectorNames(char** string_vector, int* vector_size, int* string_size)
  * @brief Get the list of body vectors
  *
  * @cond PYDOC
  * usage bodyNames = parameters_getBodyVectorName()
  * @return bodyName (string array) : body vector names
  * @endcond
  *
  * @cond CDOC
  * @param[out] string_vector (char **) : body vector name
  * @param[out] vector_size (int * ) : size of string_vector
  * @param[out] string_size (int * ) : size of each string
  * @endcond
  */
  extern "C" void parameters_getBodyVectorNames(char** string_vector, int* vector_size, int* string_size);
 /**
  * @fn int parameters_getContactStatusId(char* string_in)
  * @brief Get the id a contact status from its name
  *
  * @cond PYDOC
  * usage i_param = parameters_getContactStatusId(bodyName)
  * @param[in] bodyName (string): contact status name
  * @return    i_param (int)    : contact status parameter
  * @endcond
  *
  * @cond CDOC
  * @param[in] string_in (char *) : contact status name
  * @return    i_param   (int)    : contact status parameter
  * @endcond
  */
  extern "C" int parameters_getContactStatusId(char* cvalue1);
 /**
  * @fn void parameters_getContactStatusNames(char** string_vector, int* vector_size, int* string_size)
  * @brief Get the list of contact statuss
  *
  * @cond PYDOC
  * usage bodyNames = parameters_getContactStatusName()
  * @return bodyName (string array) : contact status names
  * @endcond
  *
  * @cond CDOC
  * @param[out] string_vector (char **) : contact status name
  * @param[out] vector_size (int * ) : size of string_vector
  * @param[out] string_size (int * ) : size of each string
  * @endcond
  */
  extern "C" void parameters_getContactStatusNames(char** string_vector, int* vector_size, int* string_size);
 /**
  * @fn void parameters_checkAll(void)
  * @brief Check the consistency of all parameters id and name
  *
  * @cond PYDOC
  * usage parameters_checkAll()
  * @endcond
  */
  extern "C" void parameters_checkAll(void);