external/lmgc90_dev-fortran_lib/src/ChiPy/shared/wrap_parameters.f90


  function getInterLawId(string) bind(c, name='parameters_getInterLawId')
    implicit none
    integer(c_int) :: getInterLawId
    type(c_ptr)   , value :: string
    !
    character(len=24), pointer :: fstring

    call c_f_pointer(string, fstring)

    getInterLawId = get_inter_law_id_from_name(fstring)

  end function

  subroutine getInterLawNames(string_out, vector_size, string_size) bind(c, name='parameters_getInterLawNames')
    implicit none
    type(c_ptr)    :: string_out
    integer(c_int) :: vector_size, string_size
    !
    character(len=24), dimension(:), pointer :: names

    string_out  = c_null_ptr
    vector_size = 0
    string_size = 24

    names => get_inter_law_names()

    if( associated(names) ) then
      vector_size = size(names)
      string_out  = c_loc(names(1))
    end if

  end subroutine

  !-------------------------------------------------------------------------------------------------------------!

  function getIntegratorId(string) bind(c, name='parameters_getIntegratorId')
    implicit none
    integer(c_int) :: getIntegratorId
    type(c_ptr)   , value :: string
    !
    character(len=7), pointer :: fstring

    call c_f_pointer(string, fstring)

    getIntegratorId = get_integrator_id_from_name(fstring)

  end function

  subroutine getIntegratorNames(string_out, vector_size, string_size) bind(c, name='parameters_getIntegratorNames')
    implicit none
    type(c_ptr)    :: string_out
    integer(c_int) :: vector_size, string_size
    !
    character(len=7), dimension(:), pointer :: names

    string_out  = c_null_ptr
    vector_size = 0
    string_size = 7

    names => get_integrator_names()

    if( associated(names) ) then
      vector_size = size(names)
      string_out  = c_loc(names(1))
    end if

  end subroutine

  !-------------------------------------------------------------------------------------------------------------!

  function getNodeId(string) bind(c, name='parameters_getNodeId')
    implicit none
    integer(c_int) :: getNodeId
    type(c_ptr)   , value :: string
    !
    character(len=5), pointer :: fstring

    call c_f_pointer(string, fstring)

    getNodeId = get_node_id_from_name(fstring)

  end function

  subroutine getNodeNames(string_out, vector_size, string_size) bind(c, name='parameters_getNodeNames')
    implicit none
    type(c_ptr)    :: string_out
    integer(c_int) :: vector_size, string_size
    !
    character(len=5), dimension(:), pointer :: names

    string_out  = c_null_ptr
    vector_size = 0
    string_size = 5

    names => get_node_names()

    if( associated(names) ) then
      vector_size = size(names)
      string_out  = c_loc(names(1))
    end if

  end subroutine

  !-------------------------------------------------------------------------------------------------------------!

  function getDimeModeId(string) bind(c, name='parameters_getDimeModeId')
    implicit none
    integer(c_int) :: getDimeModeId
    type(c_ptr)   , value :: string
    !
    character(len=10), pointer :: fstring

    call c_f_pointer(string, fstring)

    getDimeModeId = get_dime_mode_id_from_name(fstring)

  end function

  subroutine getDimeModeNames(string_out, vector_size, string_size) bind(c, name='parameters_getDimeModeNames')
    implicit none
    type(c_ptr)    :: string_out
    integer(c_int) :: vector_size, string_size
    !
    character(len=10), dimension(:), pointer :: names

    string_out  = c_null_ptr
    vector_size = 0
    string_size = 10

    names => get_dime_mode_names()

    if( associated(names) ) then
      vector_size = size(names)
      string_out  = c_loc(names(1))
    end if

  end subroutine

  !-------------------------------------------------------------------------------------------------------------!

  function getBodyVectorId(string) bind(c, name='parameters_getBodyVectorId')
    implicit none
    integer(c_int) :: getBodyVectorId
    type(c_ptr)   , value :: string
    !
    character(len=5), pointer :: fstring

    call c_f_pointer(string, fstring)

    getBodyVectorId = get_body_vector_id_from_name(fstring)

  end function

  subroutine getBodyVectorNames(string_out, vector_size, string_size) bind(c, name='parameters_getBodyVectorNames')
    implicit none
    type(c_ptr)    :: string_out
    integer(c_int) :: vector_size, string_size
    !
    character(len=5), dimension(:), pointer :: names

    string_out  = c_null_ptr
    vector_size = 0
    string_size = 5

    names => get_body_vector_names()

    if( associated(names) ) then
      vector_size = size(names)
      string_out  = c_loc(names(1))
    end if

  end subroutine

  !-------------------------------------------------------------------------------------------------------------!

  function getContactStatusId(string) bind(c, name='parameters_getContactStatusId')
    implicit none
    integer(c_int) :: getContactStatusId
    type(c_ptr)   , value :: string
    !
    character(len=5), pointer :: fstring

    call c_f_pointer(string, fstring)

    getContactStatusId = get_contact_status_id_from_name(fstring)

  end function

  subroutine getContactStatusNames(string_out, vector_size, string_size) bind(c, name='parameters_getContactStatusNames')
    implicit none
    type(c_ptr)    :: string_out
    integer(c_int) :: vector_size, string_size
    !
    character(len=5), dimension(:), pointer :: names

    string_out  = c_null_ptr
    vector_size = 0
    string_size = 5

    names => get_contact_status_names()

    if( associated(names) ) then
      vector_size = size(names)
      string_out  = c_loc(names(1))
    end if

  end subroutine

  !-------------------------------------------------------------------------------------------------------------!

  subroutine checkAll() bind(c, name='parameters_checkAll')
    implicit none

    call check_all_parameters()

  end subroutine

end module
